--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,12 +1,26 @@
+:root {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+    Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .container {
-  border: 5px black solid;
   max-width: 1500px;
   width: 100%;
 }
 
 .cardContainer {
-  border: 2px solid blue;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 20px;
+}
+
+img {
+  width: 180px;
+  filter: brightness(70%);
+  transition: transform 300ms;
+}
+
+img:hover {
+  filter: brightness(100%);
+  transform: scale(105%);
 }
