--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,4 +1,16 @@
-.header {
+header {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  border-bottom: #444 0.01px solid;
+}
+
+h1 {
+  color: whitesmoke;
+  font-size: 30px;
+}
+
+.score {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -9,7 +21,4 @@ section > div {
   font-size: 20px;
   margin: 5px;
   color: white;
-}
-img {
-  width: 180px;
 }
